# analysis-of-transformers

./: .gitignore  README.md  pyproject.toml
graph_connectivity/scripts/: generate_data.py
graph_connectivity/src/: data.py  dsu.py  model.py  train.py
llm_auxiliary/scripts/: run_experiment.py
llm_auxiliary/src/: data.py  evaluate.py  model.py  state_tracking.py  train.py
notebooks/: graph-train-fixed-length.ipynb  graph_train.ipynb  shortest-path-dijkstra-compare-aux-delta.ipynb  shortest-path-dijkstra-compare-depth-bridge.ipynb  shortest-path-dijkstra-compare-depth-scaling.ipynb  shortest-path-dijkstra-compare-lambda-sweep.ipynb  shortest-path-dijkstra-train-10-14.ipynb  shortest-path-dijkstra-train-2-4-6.ipynb  shortest-path-dijkstra-train.ipynb  variables-tracking-train-fixed-length.ipynb  variables_tracking_train.ipynb
shortest_path_dijkstra/: __init__.py
shortest_path_dijkstra/scripts/: __init__.py  generate_data.py
shortest_path_dijkstra/src/: __init__.py  data.py  evaluate.py  model.py  tokenizer.py  train.py
string_edit_sequence/: __init__.py
string_edit_sequence/scripts/: __init__.py  generate_data.py
string_edit_sequence/src/: __init__.py  data.py  evaluate.py  model.py  tokenizer.py  train.py
topological_graph_sorting/: __init__.py
topological_graph_sorting/scripts/: __init__.py  generate_data.py
topological_graph_sorting/src/: __init__.py  data.py  evaluate.py  model.py  tokenizer.py  train.py
variables_tracking/: __init__.py
variables_tracking/scripts/: __init__.py  generate_data.py
variables_tracking/src/: __init__.py  data.py  (+4 more)
